daskhub/deploy/portal/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portal
  labels:
    name: portal
