daskhub/deploy/portal/base/service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: heliocloud-portal
  namespace: portal

spec:
  ports:
    - protocol: TCP
      port: 80
      # targetPort: 80  # Port which science-console is running inside the container
  selector:
    app: portal
  type: ClusterIP
